add_subdirectory(config)
add_subdirectory(core)
add_subdirectory(protobuf)
add_subdirectory(amun)
add_subdirectory(vyasa)
add_subdirectory(kuruk)
add_subdirectory(kshetra)
add_subdirectory(shunya)
add_subdirectory(simulator)
add_subdirectory(voronoi)
add_subdirectory(drona)
add_subdirectory(yodha)
add_subdirectory(vishnu)
add_subdirectory(varma)
